syntax = "proto3";
package mesh;

message IdentityRequest{}

// Peer Identity
message IdentityResponse {
  string peer_id = 1;
  string certificate_pem = 2;
}